Adds some docker configs

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@org/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "mediafusion:start": "nx serve MediaFusion"
+  },
   "private": true,
   "dependencies": {
     "@nestjs/common": "^10.0.2",
