--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,28 @@ services:
     image: postgres:latest
     container_name: postgres_container
     environment:
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
-      POSTGRES_DB: mydatabase
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     restart: always
+
+  MediaFusion:
+    build:
+      context: ./apps/MediaFusion
+      dockerfile: Dockerfile
+    container_name: media-fusion
+    ports:
+      - "3000:3000"
+    depends_on:
+      - db
+    environment:
+      DATABASE_URL: ${DATABASE_URL}
+    volumes:
+      - ./apps/MediaFusion:/app
 
 volumes:
   postgres_data:
