--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,8 @@ services:
       - "3000:3000"
     depends_on:
       - db
-    environment:
-      DATABASE_URL: ${DATABASE_URL}
+    env_file:
+      - ./.env
 
 volumes:
   postgres_data:
